# sentimenta

./: .dockerignore  .gitignore  Dockerfile  README.md  README.ru.md  TODO.md  docker-compose.yml  dotenv_template  prometheus.yml
backend/: Dockerfile  go.mod  go.sum  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/cmd/: main.go
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/internal/adviceService/: orm.go  repository.go  scheduler.go  service.go
backend/internal/auth/: auth.go
backend/internal/authService/: orm.go
backend/internal/config/: config.go
backend/internal/db/: db.go
backend/internal/errors/: errors.go
backend/internal/handlers/: advice.go  auth.go  mood.go  response.go  status.go  user.go  ws.go
backend/internal/hash/: hash.go
backend/internal/jwt/: jwt.go
backend/internal/metrics/: db_logger.go  http_middleware.go  prometheus.go
backend/internal/middleware/: jwt.go
backend/internal/models/: advice.go  mood.go  oauth.go  user.go
backend/internal/moodService/: orm.go  repository.go  service.go
backend/internal/prometheus/: middleware.go  prometheus.go
backend/internal/repository/: adviceRepo.go  interfaces.go  moodRepo.go  userRepo.go
backend/internal/scheduler/: scheduler.go
backend/internal/security/: jwt.go
backend/internal/service/: adviceService.go  interfaces.go  moodService.go  userService.go
backend/internal/userService/: orm.go  repository.go  service.go
backend/src/: config.py  hash.py  jwt.py  jwt_token.py  main.py  utils.py
backend/test/: app.e2e-spec.ts
(+63 files in other folders)
